[workspace]
resolver = "2"
members = ["packages/ui", "packages/web", "packages/desktop", "packages/mobile"]

[workspace.dependencies]
dioxus = { version = "0.7.1", features = [] }
serde = { version = "1", features = ["derive"] }
envy = "0.4"
dotenvy = "0.15"

# workspace
ui = { path = "packages/ui" }
